--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -2,6 +2,7 @@ $primary-color: rgb(104, 96, 217);
 $secondary-color: rgb(51, 37, 245);
 $shadow-color: rgba(0,0,0,0.08);
 $content-color: rgb(217, 217, 217);
+$gray-color: rgb(74, 85, 104);
 
 $light-color: rgb(240, 248, 255);
 $light-color-hover: rgb(221, 230, 237);
