--- a/frontend/src/components/UI/MyInput/MyInput.scss
+++ b/frontend/src/components/UI/MyInput/MyInput.scss
@@ -30,17 +30,14 @@
 }
 
 .input-group input:focus+label,
-.input-group select:focus+label,
-.input-group input:not(:placeholder-shown)+label,
-.input-group select:not(:placeholder-shown)+label {
+.input-group input:not(:placeholder-shown)+label {
   top: 0;
   transform: translateY(-50%);
   font-size: 12px;
   color: #4285f4;
 }
 
-.input-group input:focus,
-.input-group select:focus {
+.input-group input:focus{
   border-color: #4285f4;
   outline: none;
 }
