--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -6,3 +6,10 @@ $gray-color: rgb(74, 85, 104);
 
 $light-color: rgb(240, 248, 255);
 $light-color-hover: rgb(221, 230, 237);
+
+$doctor-color: #1abc9c;
+$doctor-hover: #16a085;
+$patient-color: #9b59b6;
+$patient-hover: #8e44ad;
+$card-shadow-hover: 0 8px 25px rgba(0, 0, 0, 0.15);
+$transition: all 0.3s ease;
