--- a/frontend/src/components/FormAuth/FormAuth.scss
+++ b/frontend/src/components/FormAuth/FormAuth.scss
@@ -6,7 +6,7 @@
   }
 
   &__form {
-    width: 400px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -49,17 +49,77 @@
       }
     }
   }
-}
 
-.radios {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+  &__radio-btn {
+    display: inline-block;
+    margin-right: 10px;
 
-  .radio {
-    display: flex;
-    align-items: center;
-    gap: 5px;
+    input[type=radio] {
+      display: none;
+    }
+
+    label {
+      display: inline-block;
+      cursor: pointer;
+      padding: 0px 60px;
+      line-height: 34px;
+      background-color: $light-color;
+      color: #999;
+      border-radius: 6px;
+      user-select: none;
+
+      &:hover {
+        color: #525252;
+      }
+    }
+
+    /* Checked */
+    input[type=radio]:checked+label {
+      background: linear-gradient(148.98deg, $primary-color 8.51%, $secondary-color 120.39%);
+      color: white;
+    }
+  }
+
+  &__resend-code {
+    margin: 15px 0;
+    text-align: center;
+  }
+
+  &__timer {
+    color: #666;
+    font-size: 14px;
+  }
+
+  &resend-button {
+    background: none;
+    border: none;
+    color: #2a5885;
+    cursor: pointer;
+    font-size: 14px;
+
+    &:disabled {
+      color: #ccc;
+      cursor: not-allowed;
+    }
+  }
+
+  &__container {
+    position: relative;
+    width: 100%;
+  }
+
+  &__progress {
+    height: 10px;
+    background: #eee;
+    margin-bottom: 40px;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+
+  &__progress-bar {
+    height: 100%;
+    background: $primary-color;
+    transition: width 0.3s ease;
   }
 }
 
@@ -74,17 +134,6 @@ a:hover {
   color: #3325f5;
   cursor: pointer;
 }
-
-// Variables
-$doctor-color: #1abc9c;
-$doctor-hover: #16a085;
-$patient-color: #9b59b6;
-$patient-hover: #8e44ad;
-$button-color: #3498db;
-$button-hover: #2980b9;
-$card-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-$card-shadow-hover: 0 8px 25px rgba(0, 0, 0, 0.15);
-$transition: all 0.3s ease;
 
 .role-selection {
   max-width: 800px;
@@ -107,37 +156,40 @@ $transition: all 0.3s ease;
 .role-card {
   width: 280px;
   padding: 2rem;
+  border: 1px solid $light-color;
   border-radius: 12px;
-  box-shadow: $card-shadow;
   transition: $transition;
   cursor: pointer;
-  background: white;
+  background: rgb(253, 253, 253);
+  box-shadow: 0 0 5px $shadow-color;
   border: 2px solid transparent;
+  transition: all 0.8s ease;
 
   &:hover {
-    // transform: translateY(-5px);
-    box-shadow: $card-shadow-hover;
+    box-shadow: 0 0 10px $shadow-color;
+    transform: scale(1.02);
   }
 
-  &__icon {
-    font-size: 3rem;
+  img {
+    width: 100px;
+    height: 100px;
     margin-bottom: 1rem;
   }
 
   &__title {
     font-size: 1.4rem;
-    color: $primary-color;
+    color: black;
     margin-bottom: 1rem;
   }
 
   &__description {
-    color: $secondary-color;
+    color: gray;
     margin-bottom: 1.5rem;
     line-height: 1.5;
   }
 
   &__button {
-    background: $button-color;
+    background: $primary-color;
     color: white;
     border: none;
     padding: 0.8rem 1.5rem;
@@ -147,36 +199,7 @@ $transition: all 0.3s ease;
     transition: $transition;
 
     &:hover {
-      background: $button-hover;
-    }
-  }
-
-  // Модификаторы
-  &_doctor {
-    .role-card__button {
-      background: $doctor-color;
-
-      &:hover {
-        background: $doctor-hover;
-      }
-    }
-
-    &:hover {
-      border-color: $doctor-color;
-    }
-  }
-
-  &_patient {
-    .role-card__button {
-      background: $patient-color;
-
-      &:hover {
-        background: $patient-hover;
-      }
-    }
-
-    &:hover {
-      border-color: $patient-color;
+      background: $secondary-color;
     }
   }
 }
@@ -211,33 +234,4 @@ $transition: all 0.3s ease;
       transform: translateY(0);
     }
   }
-}
-
-
-.form_radio_btn {
-	display: inline-block;
-	margin-right: 10px;
-}
-.form_radio_btn input[type=radio] {
-	display: none;
-}
-.form_radio_btn label {
-	display: inline-block;
-	cursor: pointer;
-	padding: 0px 62px;
-	line-height: 34px;
-  background-color: $light-color;
-  color: #999;
-	border-radius: 6px;
-	user-select: none;
-}
- 
-/* Checked */
-.form_radio_btn input[type=radio]:checked + label {
-	background: linear-gradient(148.98deg, $primary-color 8.51%, $secondary-color 120.39%);
-  color: white;
-}
- 
-.form_radio_btn label:hover {
-	color: #525252;
 }
