--- a/frontend/src/components/FormAuth/FormAuth.scss
+++ b/frontend/src/components/FormAuth/FormAuth.scss
@@ -52,7 +52,9 @@
 
   &__radio-btn {
     display: inline-block;
-    margin-right: 10px;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0 auto;
 
     input[type=radio] {
       display: none;
@@ -60,8 +62,9 @@
 
     label {
       display: inline-block;
+      text-align: center;
       cursor: pointer;
-      padding: 0px 60px;
+      width: 100%;
       line-height: 34px;
       background-color: $light-color;
       color: #999;
