--- a/frontend/src/components/FormAuth/FormAuth.scss
+++ b/frontend/src/components/FormAuth/FormAuth.scss
@@ -26,6 +26,7 @@
     width: 100%;
     border: none;
     padding: 15px 20px;
+    margin: 0.3rem 0;
     border-radius: 10px;
     background-color: $light-color;
 
