--- a/frontend/src/assets/styles/index.scss
+++ b/frontend/src/assets/styles/index.scss
@@ -1,11 +1,15 @@
 // PersonalAccount.scss
 @use './variables.scss' as *;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Mulish", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
 }
 
-.account{
+.account {
     &-wrapper {
         display: flex;
         height: 100vh;
