--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -1,6 +1,7 @@
-$primary-color: rgb(104, 96, 217);
-$secondary-color: rgb(51, 37, 245);
+$primary-color: rgb(90, 150, 246);
+$secondary-color: rgb(140, 225, 245);
 $shadow-color: rgba(0,0,0,0.08);
+
 $content-color: rgb(217, 217, 217);
 $gray-color: rgb(74, 85, 104);
 
@@ -13,3 +14,9 @@ $patient-color: #9b59b6;
 $patient-hover: #8e44ad;
 $card-shadow-hover: 0 8px 25px rgba(0, 0, 0, 0.15);
 $transition: all 0.3s ease;
+
+
+$nav-color: rgb(240, 237, 214);
+$button-color: rgb(38, 109, 211);
+$button-color-hover: rgb(35, 95, 179);
+$list-color: rgb(10, 17, 38);
