--- a/frontend/src/components/UI/Slider/Slider.scss
+++ b/frontend/src/components/UI/Slider/Slider.scss
@@ -1,37 +1,47 @@
+@use '../../../assets/styles/variables.scss' as *;
+
 .slider {
+  background: linear-gradient($primary-color, $secondary-color);
   position: relative;
+  height: 35vh;
+  padding: 5rem 0;
   width: 100%;
-  overflow: hidden;
-  height: 60vh;
 
-  &__container {
+  &__content {
     position: relative;
-    width: 100%;
-    height: 100%;
-  }
-
-  &__dots {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
     display: flex;
-    gap: 10px;
-    z-index: 10;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100%;
+    padding: 0 10%;
+    width: 45%;
   }
 
-  &__dot {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    border: none;
-    background-color: rgba(255, 255, 255, 0.5);
-    cursor: pointer;
-    padding: 0;
-    transition: background-color 0.3s ease;
+  &__text {
+    h3 {
+      font-size: 2.5rem;
+      margin-bottom: 1.5rem;
+      text-align: left;
+      color: white;
+    }
+  }
 
-    &.active {
-      background-color: white;
+  &__button {
+    margin-top: 15px;
+
+    a {
+      padding: 14px 24px;
+      border-radius: 10px;
+      background-color: $button-color;
+      color: white;
+      font-weight: bold;
+      font-size: 25px;
+      transition: all 0.3s ease;
+
+      &:hover {
+        background-color: $button-color-hover;
+      }
     }
   }
 }
@@ -61,40 +71,5 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
-
-  &__content {
-    position: relative;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100%;
-    padding: 0 10%;
-    color: white;
-  }
-
-  &__text {
-    h3 {
-      font-size: 2.5rem;
-      margin-bottom: 1.5rem;
-    }
-  }
-
-  &__button {
-    &__text {
-      padding: 14px 24px;
-      background-color: #fff;
-      color: #333;
-      text-decoration: none;
-      border-radius: 4px;
-      font-weight: bold;
-      transition: all 0.3s ease;
-
-      &:hover {
-        background-color: #f0f0f0;
-      }
-    }
   }
 }
