--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -20,3 +20,7 @@ $nav-color: rgb(240, 237, 214);
 $button-color: rgb(38, 109, 211);
 $button-color-hover: rgb(35, 95, 179);
 $list-color: rgb(10, 17, 38);
+$block-color: rgb(241, 242, 246);
+$text-color: rgb(34, 35, 64);
+
+$title-size: 3rem;
