--- a/frontend/src/components/Solutions/Solutions.scss
+++ b/frontend/src/components/Solutions/Solutions.scss
@@ -6,7 +6,7 @@
   color: #333;
 
   &__title {
-    font-size: 2.5rem;
+    font-size: $title-size;
     font-weight: bold;
     margin-bottom: 2rem;
     text-align: left;
@@ -20,7 +20,8 @@
     list-style: none;
     padding: 1rem 2rem;
     border-radius: 20px;
-    margin-left: 50%;
+    width: 100%;
+    box-sizing: border-box;
     background-color: $list-color;
 
     li {
