--- a/frontend/src/components/Contacts/Contacts.scss
+++ b/frontend/src/components/Contacts/Contacts.scss
@@ -29,6 +29,16 @@
             justify-content: center;
             align-items: center;
             gap: 15px;
+
+            img {
+                transition: all 0.5s ease;
+                width: 50px;
+                height: 50px;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
+            }
         }
     }
 }
