--- a/frontend/src/assets/styles/LoginPage.scss
+++ b/frontend/src/assets/styles/LoginPage.scss
@@ -24,8 +24,10 @@
     }
 
     &__logo {
+        width: 400px;
+        
         img {
-            height: 100px;
+            width: 100%;
         }
     }
 
