--- a/frontend/src/components/FormAuth/FormAuth.scss
+++ b/frontend/src/components/FormAuth/FormAuth.scss
@@ -134,11 +134,6 @@ h3 {
   margin: 0 0 25px 0;
 }
 
-a:hover {
-  color: #3325f5;
-  cursor: pointer;
-}
-
 .role-selection {
   max-width: 800px;
   margin: 0 auto;
@@ -236,6 +231,35 @@ a:hover {
     to {
       opacity: 1;
       transform: translateY(0);
+    }
+  }
+}
+
+.reset-pin {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  padding: 10%;
+  box-sizing: border-box;
+  background: linear-gradient($primary-color, $secondary-color);
+  overflow-y: hidden;
+
+  &__form {
+    background-color: white;
+    padding: 40px;
+    height: max-content;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0 0 10px $shadow-color;
+  }
+
+  &__logo {
+    width: 400px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+
+    img {
+      width: 100%;
     }
   }
 }
