--- a/frontend/src/components/UI/UserProfile/UserProfile.scss
+++ b/frontend/src/components/UI/UserProfile/UserProfile.scss
@@ -19,11 +19,19 @@
   }
 
   &__avatar {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    border: 5px solid black;
+    overflow: hidden;
+    margin-bottom: 20px;
+
     img {
-      width: 220px;
-      height: 220px;
-      box-shadow: 0 0 13px $shadow-color;
-      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
     }
   }
 
@@ -65,6 +73,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+
     &:hover {
       background-color: #45a049;
     }
@@ -77,6 +86,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+
     &:hover {
       background-color: #d32f2f;
     }
@@ -88,6 +98,16 @@
     border-radius: 4px;
     width: 200px;
   }
+}
+
+.editable {
+  &:hover {
+    border: 5px solid $primary-color;
+  }
+}
+
+.avatar-edit-hint {
+  text-align: center;
 }
 
 .info-row {
