--- a/frontend/src/components/FormAuth/FormAuth.scss
+++ b/frontend/src/components/FormAuth/FormAuth.scss
@@ -48,6 +48,12 @@
         background-color: $secondary-color;
         cursor: pointer;
       }
+
+      &:disabled {
+        background-color: #cccccc;
+        color: #666666;
+        cursor: not-allowed;
+      }
     }
   }
 
