--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -23,4 +23,8 @@ $list-color: rgb(10, 17, 38);
 $block-color: rgb(241, 242, 246);
 $text-color: rgb(34, 35, 64);
 
+$profile-color: rgb(208, 238, 245);
+$sidebar-color: rgb(242, 242, 250);
+
+
 $title-size: 3rem;
