--- a/frontend/src/components/UI/SideBar/SideBar.scss
+++ b/frontend/src/components/UI/SideBar/SideBar.scss
@@ -17,9 +17,11 @@
   }
 
   &__logo {
-    width: 150px;
-    height: 150px;
-    margin: 40px auto;
+    margin: 30px auto;
+  }
+
+  img {
+    width: 100%;
   }
 
   &__menu {
