--- a/frontend/src/components/UI/UserProfile/UserProfile.scss
+++ b/frontend/src/components/UI/UserProfile/UserProfile.scss
@@ -4,6 +4,7 @@
   background-color: $profile-color;
   padding: 1rem 4rem;
   border-radius: 10px;
+  margin-top: 6rem;
   width: max-content;
 
   &__message {
@@ -31,10 +32,9 @@
   }
 
   &__avatar {
-    width: 190px;
-    height: 190px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
-    border: 2px solid black;
     overflow: hidden;
     margin-top: 15px;
 
@@ -46,9 +46,22 @@
     }
   }
 
+  &__links {
+    text-align: center;
+    color: $primary-color;
+
+    p {
+      &:hover {
+        color: $button-color-hover;
+        cursor: pointer;
+      }
+    }
+  }
+
   &__info {
     display:  flex;
     flex-direction: column;
+    width: 350px;
   }
 
   &__fio {
@@ -67,83 +80,16 @@
 
 }
 
-.editable {
-  position: relative;
-  cursor: pointer;
-
-  &:hover {
-    border: 5px solid $primary-color;
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.3);
-      z-index: 1000;
-    }
-
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: 50%;
-      left: 50%;
-      transform: translate(-50%, 50%);
-      width: 32px;
-      height: 32px;
-      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"><path d="M9 2L7 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-3l-2-2H9zm3 16a5 5 0 1 1 0-10 5 5 0 0 1 0 10z"/></svg>');
-      background-repeat: no-repeat;
-      z-index: 1001;
-    }
-  }
-}
-
-// Активация электронной почты
-.activated {
-  color: green !important;
-}
-
-.non-activated {
-  color: red !important;
-}
-
-
-.avatar-edit-hint {
-  text-align: center;
-}
-
-.info-row {
-  display: flex;
-  align-items: center;
-  font-size: 15px;
-  line-height: 1.5;
-  margin-bottom: 5px;
-  gap: 20px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.info-label {
-  color: $primary-color;
-  min-width: 150px;
-  font-weight: bold;
-}
-
-.info-value {
-  color: #000;
-  font-weight: 400;
-  flex-grow: 1;
-}
-
 .form-group {
     & input {
+      width: 100%;
       padding: 8px 10px;
       margin: 3px 0;
       border-radius: 8px;
       background-color: $sidebar-color;
+
+      &:focus {
+        outline: none;
+      }
     }
 }
