--- a/frontend/src/components/UI/SideBar/SideBar.scss
+++ b/frontend/src/components/UI/SideBar/SideBar.scss
@@ -2,10 +2,8 @@
 
 .sidebar {
   width: 300px;
-  padding: 0 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 20px;
+  position: fixed;
 
   &__nav {
     height: max-content;
@@ -38,6 +36,7 @@
   &__link {
     text-decoration: none;
     color: black;
+    padding: 8px 15px;
     font-size: 1.1rem;
 
     &:hover {
