--- a/frontend/src/pages/PersonalAccount/PersonalAccount.scss
+++ b/frontend/src/pages/PersonalAccount/PersonalAccount.scss
@@ -1,6 +1,13 @@
 @use "../../assets/styles/variables.scss" as *;
 
 .account {
+    &-wrapper {
+        display: flex;
+        min-height: 100vh;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
     &-header {
         width: 100%;
         height: 100px;
@@ -8,23 +15,18 @@
         &__logo {
             width: 250px;
             padding: 1.5rem 3rem;
-        }
 
-        img {
-            width: 100%;
-            height: 100%;
+            img {
+                width: 100%;
+                height: 100%;
+            }
         }
-    }
-
-    &-wrapper {
-        display: flex;
-        box-sizing: border-box;
-        height: 100vh;
-        overflow-y: hidden;
     }
 
     &-main {
-        flex-grow: 1;
+        flex: 1;
+        margin-left: 250px;
+        margin-right: 80px;
         padding: 20px;
     }
 
@@ -38,17 +40,17 @@
             width: 400px;
             margin: 20px auto;
             padding-top: 20px;
-        }
 
-        img {
-            width: 100%;
+            img {
+                width: 100%;
+            }
         }
 
         &-message {
             font-size: 1.3rem;
             color: green;
         }
-        
+
         &-error {
             font-size: 1.3rem;
             color: red;
@@ -90,6 +92,71 @@
                     background-color: $button-color-hover;
                 }
             }
+        }
+    }
+}
+
+.left-panel {
+    width: 80px;
+    background-color: #f8f9fa;
+    padding: 20px 10px;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    height: 100vh;
+    right: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.patient-page {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+
+/* Адаптивность для мобильных устройств */
+@media (max-width: 768px) {
+    .account {
+        &-wrapper {
+            flex-direction: column;
+        }
+
+        &-main {
+            margin-left: 0;
+            margin-right: 0;
+            padding: 10px;
+        }
+    }
+
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+        padding: 10px;
+    }
+
+    .left-panel {
+        width: 100%;
+        height: auto;
+        position: relative;
+        flex-direction: row;
+        justify-content: center;
+        padding: 10px;
+    }
+
+    .user-profile {
+        &__content {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &__info {
+            width: 100%;
         }
     }
 }
