--- a/frontend/src/assets/styles/pages.scss
+++ b/frontend/src/assets/styles/pages.scss
@@ -103,3 +103,12 @@
     }
   }
 }
+
+.line {
+    height: 1px;
+    width: 90%;
+    margin: 10px auto;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: black;
+}
