--- a/frontend/src/components/LoginComponents/FormAuth/PinCodeInput/PinCodeInput.scss
+++ b/frontend/src/components/LoginComponents/FormAuth/PinCodeInput/PinCodeInput.scss
@@ -21,9 +21,26 @@ h2 {
     border-radius: 15px;
     background-color: $light-color;
     color: $primary-color;
+    caret-color: transparent;
 
     &:focus {
         outline: none;
-        box-shadow: 0 0 5px $shadow-color;
+        box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+        animation: blink 1s ease infinite;
+
+
+        @keyframes blink {
+
+            0%,
+            100% {
+                opacity: 1;
+                box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+            }
+
+            50% {
+                opacity: 0.7;
+                box-shadow: 0 0 10px rgba(0, 123, 255, 0.8);
+            }
+        }
     }
 }
