--- a/frontend/src/components/AccountComponents/DoctorInfo/DoctorInfo.scss
+++ b/frontend/src/components/AccountComponents/DoctorInfo/DoctorInfo.scss
@@ -3,15 +3,16 @@
 .doctor-info {
     width: 90%;
     margin: 1rem auto;
-    padding: 20px;
+    padding: 1rem 2rem;
     border-radius: 10px;
     background-color: $profile-color;
     box-sizing: border-box;
     text-align: center;
 
     &__content {
-        width: 800px;
         margin: 1rem auto;
+        padding: 0 1rem;
+        box-sizing: border-box;
         display: flex;
         text-align: left;
         flex-direction: column;
