--- a/frontend/src/assets/styles/pages.scss
+++ b/frontend/src/assets/styles/pages.scss
@@ -1,4 +1,4 @@
-@use "../../assets/styles/variables.scss" as *;
+@use "./variables.scss" as *;
 
 .color-block {
   display: flex;
@@ -30,6 +30,50 @@
   }
 }
 
+.auth {
+    &__window {
+        display: flex;
+        box-sizing: border-box;
+    }
+
+    &__left {
+        width: 50%;
+        height: 100vh;
+        background: linear-gradient(148.98deg, $primary-color 8.51%, $secondary-color 120.39%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__right {
+        width: 50%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__logo {
+        width: 400px;
+        
+        img {
+            width: 100%;
+        }
+    }
+
+    &__box {
+        width: 450px;
+        height: 600px;
+        border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        box-sizing: border-box;
+    }
+}
+
 .account {
     margin: 0;
     display: flex;
@@ -45,7 +89,9 @@
     &__content {
         flex: 1;
         box-sizing: border-box;
-        padding: 10px;
+        padding: 20px;
+        margin-top: 95px;
+        background-color: $light-color;
     }
 }
 
@@ -111,4 +157,55 @@
     border: 1px solid black;
     border-radius: 10px;
     background-color: black;
+}
+
+
+
+
+.admin-page {
+    padding: 20px;
+
+    &__table {
+        padding: 10px;
+
+        & thead {
+            background-color: $primary-color;
+            color: white;
+            font-size: 1.3rem;
+            font-weight: bolder;
+
+            & th {
+                padding: 5px 10px;
+            }
+        }
+
+        & tbody {
+            background-color: $light-color;
+            text-align: center;
+            font-size: 1.2rem;
+            color: $text-color;
+
+            & tr:hover {
+                background-color: $light-color-hover;
+            }
+
+            & td {
+                padding: 10px 13px;
+            }
+        }
+
+        & .comfirm {
+            &:hover {
+                color: green;
+                background-color: rgb(8, 224, 8);
+            }
+        }
+
+        & .reject {
+            &:hover {
+                color: rgb(107, 35, 35);
+                background-color: rgb(255, 7, 7);
+            }
+        }
+    }
 }
