--- a/frontend/src/features/account/RightPanel/RightPanel.scss
+++ b/frontend/src/features/account/RightPanel/RightPanel.scss
@@ -3,7 +3,7 @@
 .rightPanel {
     width: 60px;
     padding: 15px;
-    margin-right: 20px;
+    margin: 0 20px;
     height: 100vh;
     display: flex;
     flex-direction: column;
