--- a/frontend/src/features/account/PatientInfo/PatientInfo.scss
+++ b/frontend/src/features/account/PatientInfo/PatientInfo.scss
@@ -1,91 +1,36 @@
 @use '../../../assets/styles/variables.scss' as *;
 
-.content {
+.patientinfo {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 
-    &__form-client {
+    &__form {
         background-color: white;
         box-shadow: 0 0 10px $shadow-color;
         width: max-content;
         height: max-content;
         padding: 20px;
         border-radius: 10px;
+        width: 90%;
+        margin: 0 auto;
+        box-sizing: border-box;
     }
-}
 
-.form-title {
-    color: $primary-color;
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-.section-title {
-    color: $primary-color;
-    margin: 25px 0 15px;
-    font-size: 1.2rem;
-    padding-bottom: 8px;
-}
-
-.form-field {
-    margin-bottom: 20px;
-
-    label {
-        display: block;
-        margin-bottom: 8px;
-        font-weight: 500;
+    &__info-section {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+        margin: 20px 0;
     }
-}
 
-.form-input {
-    width: 100%;
-    border-radius: 4px;
-    font-size: 1rem;
-    transition: border-color 0.3s;
-    background-color: $light-color;
-    color: black;
-
-    &:focus {
-        border-color: $primary-color;
-        outline: none;
-    }
-}
-
-.file-upload {
-    margin-top: 10px;
-}
-
-.file-input {
-    display: none;
-}
-
-.file-label {
-    display: inline-block;
-    padding: 8px 15px;
-    background-color: $light-color;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 0.3s;
-
-    &:hover {
-        background-color: $light-color-hover;
-    }
-}
-
-.submit-button {
-    display: block;
-    width: 100%;
-    padding: 12px;
-    background-color: $primary-color;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 30px;
-    transition: background-color 0.3s;
-
-    &:hover {
-        background-color: $secondary-color;
+    &__block {
+        padding: 5px 10px;
+        background-color: $light-color;
+        border-radius: 10px;
+        width: 100%;
+        box-sizing: border-box;
     }
 }
