--- a/frontend/src/features/account/PatientInfo/PatientInfo.scss
+++ b/frontend/src/features/account/PatientInfo/PatientInfo.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    width: 100%;
 
     &__form {
         background-color: $profile-color;
@@ -15,6 +16,12 @@
         width: 90%;
         margin: 20px auto;
         box-sizing: border-box;
+
+        h2 {
+            text-align: left;
+            margin-left: 10px;
+            font-weight: bold;
+        }
     }
 
     &__info-section {
