--- a/frontend/src/pages/auth/FormAuth/FormAuth.scss
+++ b/frontend/src/pages/auth/FormAuth/FormAuth.scss
@@ -3,6 +3,7 @@
 .auth {
   &__title {
     margin-bottom: 20px;
+    font-weight: bold;
   }
 
   &__form {
@@ -28,11 +29,13 @@
     padding: 15px 20px;
     margin: 0.3rem 0;
     border-radius: 10px;
-    background-color: $light-color;
+    background-color: $primary-color;
+    color: white;
+    box-shadow: 0 0 10px $shadow-color;
 
     &:hover {
-      box-shadow: 0 0 10px $shadow-color;
       cursor: pointer;
+      background-color: $button-color;
     }
 
     &__final {
